them 1 dong tren branch de làm conflict

--- a/47_TranLeHoaiNhan.html
+++ b/47_TranLeHoaiNhan.html
@@ -9,5 +9,6 @@
 <body>
     <h1>47_Trần Lê Hoài Nhân</h1>
     <h2>Thực hiện trên nhánh 47_TLHNhan</h2>
+    <h2>Thực hiện trên nhánh 47_TLHNhan, thêm 1 dòng để tạo conflict</h2>
 </body>
 </html>
